Sanitize HTML post content to avoid XSS
This should always be done when HTML content from the backend should be
rendered using React's "dangeoruslySetInnerHTML" property.

Only admins "should" be able to add rich text Posts and the
input is therefore controllable, hence XSS should not be an issue here.
Still, it can't be wrong to be double-safe and sanitize the content
using the small DOMPurify library.

--- a/rtg/package.json
+++ b/rtg/package.json
@@ -12,6 +12,7 @@
     "blob-polyfill": "^3.0.20180112",
     "canvas-toBlob": "^1.0.0",
     "date-fns": "^2.16.1",
+    "dompurify": "^2.2.6",
     "hsl-to-hex": "^1.0.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.1",
